--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,8 @@
       name="description"
       content="A responsive web application developed for managing demography and Air Quality features to help patients in controlling their asthma condition"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/TaWES192.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/TaWES_icon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
